--- a/css/styles.css
+++ b/css/styles.css
@@ -804,6 +804,11 @@ box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
     justify-content: center;
     position: absolute;
     right: 8px;
+    top: 8px;
+}
+
+.modal-button:hover {
+    fill: #2196F3;
 }
 
 .backdrop {
@@ -841,10 +846,12 @@ box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
     /*left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);*/
-    padding: 8px;
+    padding: 40px;
     transition: transform 0.7s cubic-bezier(0.250, 0.460, 0.450, 0.940),
     opacity 0.7s cubic-bezier(0.250, 0.460, 0.450, 0.940),
     transform-origin 0.7s cubic-bezier(0.250, 0.460, 0.450, 0.940);
+    display: flex;
+    flex-direction: column;
 }
 
 .backdrop.is-hidden .modal-form{
@@ -927,3 +934,207 @@ box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
     transition-duration: 250ms;
 }
 
+.modal-title {
+    text-align: center;
+    margin-bottom: 12px;
+}
+
+.label-name {
+    display: block;
+    font-size: 20px;
+    line-height: 1.15;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: #212121;
+    text-align: start;
+    font-size: 12px;
+    line-height: inherit;
+    
+    letter-spacing: 0.01em;
+    
+    color: #757575;
+    margin-bottom: 4px;
+}
+
+.agreement {
+    font-size: 14px;
+    line-height: 1.7;
+    letter-spacing: 0.03em;
+    margin-left: 7px;
+    
+    color: #757575;
+}
+
+.agreement a {
+    color: #2196F3;
+    text-underline-position: under;
+}
+
+.field {
+    width: 100%;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    box-sizing: border-box;
+    border-radius: 4px;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    padding-right: 16px;
+    padding-left: 42px;
+    cursor: pointer;
+    outline: transparent;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 250ms;
+}
+
+.field.comment {
+    /* color: rgba(117, 117, 117, 0.5); */
+    resize: none;
+    padding: 12px 16px;
+}
+
+.button-send {
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.87;
+    /* identical to box height, or 188% */
+    
+    /* display: flex;
+    align-items: center;
+    text-align: center; */
+    letter-spacing: 0.06em;
+    
+    color: #FFFFFF;
+    padding: 10px 55px;
+    width: 200px;
+    background: #2196F3;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    border-color: transparent;
+    display: block;
+    margin-left: auto;
+    margin-right: auto; 
+    margin-top: 30px;
+    cursor: pointer;
+}
+
+.button-send:hover,
+.button-send:focus,
+.subscribe-btn:hover,
+.subscribe-btn:focus {
+    background: #188CE8;
+}
+
+.input-box {
+    position: relative;
+}
+
+.input-box:not(:last-child) {
+    margin-bottom: 10px;
+}
+
+.icon-field {
+    position: absolute;
+    left: 12px;
+    top: 30px;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 250ms;
+}
+
+.agreement-box {
+    margin-top: 10px;
+    display: flex;
+    align-items: center;
+}
+
+    /* color: #2196F3; */
+
+.field:focus {
+    border-color: #2196F3;
+}
+
+.field:focus + .icon-field {
+    fill: #2196F3;
+}
+
+
+.visually-hidden{
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+    border: 0;
+    padding: 0;
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    margin: -1px;
+}
+
+.custom-checkbox {
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+    width: 16px;
+    height: 15px;
+    border: 1.8px solid #212121;
+    border-radius: 2px;
+    background-color:#ffffff;
+    background-origin: border-box;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 250ms;
+}
+
+.custom-icon {
+    fill: #ffffff;
+}
+
+.agreement-checkbox:checked + .custom-checkbox {
+    background-color: #2196F3;
+    border:transparent;
+}
+
+.subscribe {
+    margin-left: 93px;
+}
+
+.subscribe-title {
+    margin-bottom: 20px;
+}
+
+.subscribe-mail {
+    width: 358px;
+    padding: 15px 16px;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    box-sizing: border-box;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+    outline: transparent;
+    background-color: #2F303A;
+    color: #FFFFFF;
+}
+
+.subscribe-btn {
+    margin-left: 12px;
+    background: #2196F3;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    border: transparent;
+    padding: 10px 29px;
+        cursor: pointer;
+}
+
+.subscribe-btn-text {
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+    /* display: flex;
+    align-items: center;
+    text-align: center; */
+    letter-spacing: 0.06em;
+    
+    color: #FFFFFF;
+}
+
+.subscribe-icon {
+    margin-left: 10px;
+    vertical-align: middle;
+}
