--- a/css/styles.css
+++ b/css/styles.css
@@ -167,7 +167,6 @@ font-style: normal;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     top: 0;
     left: 0;
-    
 } 
 
 
@@ -801,6 +800,11 @@ box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
+.modal-button:hover,
+.modal-button:focus {
+    fill: #2196F3;
+}
+
 .modal-button {
     content: '';
     width: 30px;
@@ -815,10 +819,7 @@ box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
     position: absolute;
     right: 8px;
     top: 8px;
-}
-
-.modal-button:hover {
-    fill: #2196F3;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop {
@@ -845,7 +846,7 @@ box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
 
 .modal-form {
     /*position: absolute;*/
-    position: relative;
+    /* position: relative; */
     width: 528px;
     min-height: 581px;
     background: #FFFFFF;
@@ -968,8 +969,7 @@ box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
     padding-left: 42px;
     cursor: pointer;
     outline: transparent;
-    /* transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    transition-duration: 250ms; */
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .field.comment {
@@ -1001,6 +1001,7 @@ box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
     margin-right: auto; 
     margin-top: 30px;
     cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button-send:hover,
@@ -1022,8 +1023,7 @@ box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
     position: absolute;
     left: 12px;
     top: 30px;
-    /* transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    transition-duration: 250ms; */
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .agreement-box {
@@ -1085,6 +1085,7 @@ box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
 
 .subscribe-title {
     margin-bottom: 20px;
+    display: block;
 }
 
 .subscribe-mail {
