--- a/css/styles.css
+++ b/css/styles.css
@@ -923,7 +923,13 @@ box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
 }
 
 .modal-title {
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1.15;
     text-align: center;
+    letter-spacing: 0.03em;
+    
+    color: #212121;
     margin-bottom: 12px;
 }
 
@@ -1066,6 +1072,7 @@ box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
     border-radius: 2px;
     background-color:#ffffff;
     background-origin: border-box;
+    margin-left: 12px;
     /* transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     transition-duration: 250ms; */
 }
