--- a/css/styles.css
+++ b/css/styles.css
@@ -1073,8 +1073,8 @@ box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
     background-color:#ffffff;
     background-origin: border-box;
     margin-left: 12px;
-    /* transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    transition-duration: 250ms; */
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .custom-icon {
